--- a/fpt/users/templates/users/user_page.html
+++ b/fpt/users/templates/users/user_page.html
@@ -1,1 +1,3 @@
 <h1>User Page</h1>
+<h1 class="text-white mt-0" id="first_name">{{ user.first_name }} !</h1>
+<h1 class="text-white mt-0" id="total_trades">{{ total_trades }} !</h1>
