--- a/fpt/users/templates/users/user_page.html
+++ b/fpt/users/templates/users/user_page.html
@@ -1,3 +1,34 @@
+{% extends 'live/base.html' %}
+{% block content %}
+{% load static %}
 <h1>User Page</h1>
-<h1 class="text-white mt-0" id="first_name">{{ user.first_name }} !</h1>
-<h1 class="text-white mt-0" id="total_trades">{{ total_trades }} !</h1>
+<h1 class="text-white mt-0" id="first_name">Hi {{ user.first_name }} !</h1>
+<h1 class="text-white mt-0" id="total_trades">Total profit : {{ total_trades }} $!</h1>
+
+<form class="mt-5" action="{% url 'users:user_page' user.id %}" method="POST">
+    {% csrf_token %}
+    <!-- Currency pair input-->
+   <select class="ui dropdown" id="currency_pair" name="currency_pair" data-sb-validations="required,position">
+       {% for currency in all_currency_pairs %}
+            <option value="{{ currency.name }}">{{ currency.name }}</option>
+       {% endfor %}
+   </select>
+    <!-- Position input-->
+    <div class="ui input">
+       <input class="form-control" id="position" name="position" placeholder="Enter position" data-sb-validations="required,position" />
+    </div>
+    <!-- Entry point input-->
+    <div class="ui input">
+        <input class="form-control" id="entry_point" name="entry_point" type="entry_point" placeholder="Entry Point" data-sb-validations="required,entry_point" />
+    </div>
+    <!-- Exit point input-->
+    <div class="ui input">
+        <input class="form-control" id="exit_point" name="exit_point" type="exit_point" placeholder="Exit Point" data-sb-validations="required,exit_point" />
+    </div>
+    <!-- Profit input-->
+    <div class="ui input">
+        <input class="form-control" id="profit" name="profit" type="profit" placeholder="Profit" data-sb-validations="required,profit" />
+    </div>
+    <button class="ui primary button" id="submitButton" type="submit">Add Trade</button>
+</form>
+{% endblock %}
