Refactored urls routes and finished homepage

--- a/fpt/live/templates/live/homepage.html
+++ b/fpt/live/templates/live/homepage.html
@@ -1,1 +1,14 @@
-<h1>Hello World ! </h1>
+{% extends 'live/base.html' %}
+{% block content %}
+{% load static %}
+
+<div class="homepage-bg">
+    <div class="container">
+        <div class="home-text">
+            <h1>FOREX PERFORMANCE TRACKER</h1>
+            <h2>Track your performance on the foreign exchange market with our online tools.</h2>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
