--- a/fpt/live/static/live/css/style.css
+++ b/fpt/live/static/live/css/style.css
@@ -4,6 +4,58 @@
     box-sizing: border-box;
 }
 
+body, html {
+    height: 100%;
+    width: 100%
+    background-size: contain;
+    background-image: url("../assets/img/quren-bg.png");
+    filter: brightness(100%)
+}
+
+.homepage-bg{
+    height: 100%;
+    width: 100%
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.container{
+    height: 100%;
+    width: 100%;
+}
+
+h1{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+}
+
+.home-text h1{
+
+    font-size: 3rem;
+    color: #EDEDED;
+    letter-spacing: 4px;
+}
+
+h2{
+    font-weight: 300;
+}
+
+.home-text h2{
+
+    color: #EDEDED;
+}
+
+.home-text{
+    position: relative;
+    float: left;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
 nav{
     display: flex;
     justify-content: space-around;
@@ -11,6 +63,7 @@ nav{
     min-height: 8vh;
     background-color: #EDEDED;
     font-family: 'Poppins', sans-serif;
+    font-weight: 600;
     text-transform: uppercase;
 
 }
@@ -116,3 +169,11 @@ nav{
 #submitButton:hover{
     background-color: rgb(80, 8, 111)
 }
+
+
+
+
+
+
+
+
