--- a/fpt/live/templates/live/base.html
+++ b/fpt/live/templates/live/base.html
@@ -17,6 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 
     <!-- custom css & js -->
@@ -25,14 +26,14 @@
   <header>
     <nav>
       <div class="logo">
-        <a href="#">
+        <a href="{% url 'homepage' %}">
           <img class='img-fluid' src="{% static 'live/assets/img/quren_icon.png' %}" id="nav-icon"/>
         </a>
       </div>
       <ul class="nav-links">
-        <li><a href="#">Live</a></li>
+        <li><a href="{% url 'live:live_charts' %}">Live</a></li>
         <li><a href="#">Profile</a></li>
-        <li><a href="#">About Us</a></li>
+        <li><a href="{% url 'info:about_us' %}">About Us</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
