--- a/fpt/live/templates/live/base.html
+++ b/fpt/live/templates/live/base.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,11 +18,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
 
     <!-- custom css & js -->
     <link rel="stylesheet" href="{% static 'live/css/style.css' %}">
   </head>
-  <header>
+  <body>
     <nav>
       <div class="logo">
         <a href="{% url 'homepage' %}">
@@ -32,8 +32,12 @@
       </div>
       <ul class="nav-links">
         <li><a href="{% url 'live:live_charts' %}">Live</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="{% url 'info:about_us' %}">About Us</a></li>
+        {% if user.is_authenticated %}
+        <li><a href="{% url 'users:user_page' user_id=user.id %}">User</a></li>
+        {% else %}
+        <li><a href="{% url 'users:login' %}">login</a></li>
+        {% endif %}
+        <li><a href="{% url 'info:about_us' %}">About</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
@@ -41,12 +45,8 @@
         <div class="line3"></div>
       </div>
     </nav>
-  </header>
-  <body>
-    <div class="ui container mt-5">
-        {% block content %}
-        {% endblock %}
-    </div>
+    {% block content %}
+    {% endblock %}
   </body>
   <script src="{% static 'live/js/main.js' %}" defer></script>
   <script src="{% static 'live/js/semantic.js' %}" defer></script>
