--- a/fpt/users/templates/users/sign_up_page.html
+++ b/fpt/users/templates/users/sign_up_page.html
@@ -1,1 +1,72 @@
-<h1>Sign Up Page</h1>
+{% extends 'live/base.html' %}
+{% block content %}
+{% load static %}
+<div class="container">
+    <div class="bg-1">
+        <div class="home-text">
+            <div class="h1-wrapper">
+            <h1>SIGN UP</h1>
+            </div>
+            <div class="bar-container">
+                <img class='img-responsive' src="{% static 'live/assets/img/homepage-bar2.png' %}" id="homepage-bar"/>
+                <div class="h2-wrapper">
+                    <h2>TRACK YOUR FOREX PERFORMANCE WITH OUR ONLINE TOOLS</h2>
+                </div>
+            </div>
+            <div class="ghost-2">
+                <h1>I</h1>
+            </div>
+                <form class="mt-5" action="{% url 'users:sign_up' %}" method="POST">
+                    {% csrf_token %}
+                    <div class="sign-up-wrapper">
+                        <div class="row">
+                            <div class="col">
+                                <h3>Username</h3>
+                            </div>
+                            <div class="col">
+                                <div class="input-wrapper">
+                                    <div class="ui input">
+                                        {{ form.username }}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <h3> Email </h3>
+                            </div>
+                            <div class="col">
+                                <div class="input-wrapper">
+                                    <div class="ui input">
+                                        {{ form.email }}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <h3> Password </h3>
+                            </div>
+                            <div class="col">
+                                <div class="input-wrapper">
+                                    <div class="ui input">
+                                        {{ form.password }}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <h3> Capital </h3>
+                            </div>
+                            <div class="col">
+                                <div class="input-wrapper">
+                                    <div class="ui input">
+                                        <input class="form-control" id="capital" name="capital" type="capital" placeholder="Capital" data-sb-validations="required,capital" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    <button class="ui primary button" id="submitButton" type="submit">Sign Up</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
