--- a/fpt/live/templates/live/homepage.html
+++ b/fpt/live/templates/live/homepage.html
@@ -1,9 +1,8 @@
 {% extends 'live/base.html' %}
 {% block content %}
 {% load static %}
-
-<div class="homepage-bg">
-    <div class="container">
+<div class="container">
+    <div class="bg-1">
         <div class="home-text">
             <h1>FOREX PERFORMANCE TRACKER</h1>
             <div class="bar-container">
