--- a/fpt/users/templates/users/login_page.html
+++ b/fpt/users/templates/users/login_page.html
@@ -2,28 +2,30 @@
 {% block content %}
 {% load static %}
 <div class="container">
-    <div class="home-text">
-        <h1 id="login-text">LOGIN</h1>
-        <form class="mt-5" action="{% url 'users:login' %}" method="POST">
-            {% csrf_token %}
-            <div class="sign-up-wrapper">
-                <div class="row">
-                    <div class="col">
-                        <div class="ui input">
-                           {{ form.email }}
+    <div class="bg-1">
+        <div class="home-text">
+            <h1 id="login-text">LOGIN</h1>
+            <form class="mt-5" action="{% url 'users:login' %}" method="POST">
+                {% csrf_token %}
+                <div class="sign-up-wrapper">
+                    <div class="row">
+                        <div class="col">
+                            <div class="ui input">
+                               {{ form.email }}
+                            </div>
+                            <div class="ui input">
+                               {{ form.password }}
+                            </div>
                         </div>
-                        <div class="ui input">
-                           {{ form.password }}
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <button class="ui primary button" id="submitButton" type="submit">Login</button>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <button class="ui primary button" id="submitButton" type="submit">Login</button>
-                    </div>
-                </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
