--- a/fpt/live/static/live/css/style.css
+++ b/fpt/live/static/live/css/style.css
@@ -372,3 +372,30 @@ nav{
   border-top: 8px solid rgb(50, 49, 50);
   padding-top: 50px;
 }
+
+.live-banner{
+    position: relative;
+    float: left;
+    left: 50%;
+    transform: translate(-50%);
+    padding-top: 100px;
+    text-align: center;
+}
+
+.live-banner h1{
+
+    font-size: 3rem;
+    color: rgb(50, 49, 50);
+    letter-spacing: 4px;
+    margin: 0 auto;
+
+}
+
+.live-banner h2{
+
+    font-size: 1rem;
+    color: #EDEDED;
+    letter-spacing: 4px;
+    margin: 0 auto;
+
+}
