--- a/fpt/live/templates/live/live_charts.html
+++ b/fpt/live/templates/live/live_charts.html
@@ -1,91 +1,115 @@
 {% extends 'live/base.html' %}
 {% block content %}
 {% load static %}
-<div class="container">
-    <div class="section-wrapper">
-        <div class="home-text">
-            <div class="h1-wrapper">
-            <h1>LIVE CURRENCY PAIRS</h1>
-            </div>
-            <div class="bar-container">
-                <img class='img-responsive' src="{% static 'live/assets/img/homepage-bar2.png' %}" id="homepage-bar"/>
-                <div class="h2-wrapper">
-                    <h2>FOREX CURRENCIES</h2>
-                </div>
-            </div>
-            <div class="ghost-2">
-                <h1>I</h1>
-            </div>
-        </div>
-        <div class="ghost-2">
-                <h1>I</h1>
-        </div>
-        <div class="ui two column padded grid">
-            <div class="column">
-                <div class="chartContainer" id="liveCurrencies" style="height:60vh; width:60vw">
-                    <h1>EURUSD</h1>
-                    <canvas id="histChart"></canvas>
-                </div>
-            </div>
-            <div class="column">
-                <h1 id="test">Hey</h1>
-            </div>
-        </div>
 
-        <script>
-
-            var loc = window.location
-            var wsStart = "ws://"
-            if (loc.protocol == 'https:'){
-                wsStart = 'wss://'
-            }
-            var endpoint = wsStart + loc.host + "/ws/live/"
-            console.log(endpoint)
-
-            socket = new WebSocket(endpoint);
-
-            socket.onopen = function(message) {
-                console.log("open", message);
-              }
-
-            socket.onmessage = function(message) {
-                console.log("message", message);
-            }
-
-            socket.onerror = function(message) {
-                console.log("error", message);
-            }
-
-            socket.onclose = function(message) {
-                console.log("close", message);
-            }
-
-            // var histData = JSON.parse('{{actualData|safe}}');
-            // console.log(histData);
-            var histChart = document.getElementById("histChart").getContext("2d");
-
-            var dataChart ={
-                labels: Object.keys(histData),
-                datasets:[
-                    {
-                        label:"EURUSD",
-                        fill: true,
-                        pointRadius: 1,
-                        backgroundColor: "rgba(120, 28, 159, 0.5)",
-                        pointBackgroundColor: "rgb(120, 28, 159)",
-                        pointBorderColor: "rgb(120, 28, 159)",
-                        pointHoverBackgroundColor: "rgb(80, 8, 111)",
-                        pointHoverBorderColor: "rgb(80, 8, 111)",
-                        data: Object.values(histData),
-                    }]
-                };
-
-            var dailyChart = new Chart(histChart, {
-                type:'line',
-                data: dataChart
-            });
-
-        </script>
+<div class="live-banner">
+    <div class="h1-wrapper">
+    <h1>LIVE CURRENCY PAIRS</h1>
     </div>
+    <div class="bar-container">
+        <img class='img-responsive' src="{% static 'live/assets/img/homepage-bar2.png' %}" id="homepage-bar"/>
+        <div class="h2-wrapper">
+            <h2>FOREX CURRENCIES</h2>
+        </div>
+    </div>
+    <div class="ghost-2">
+        <h1>I</h1>
+    </div>
+</div>
+<div class="section-wrapper">
+    <div class="ghost-2">
+        <h1>I</h1>
+    </div>
+    <div class="ui hidden divider"></div>
+    <form class="mt-5" action="{% url 'live:index'%}" method="POST">
+        {% csrf_token %}
+        <select class="ui dropdown" id="currency_pair" name="currency_pair" data-sb-validations="required,position">
+            {% for currency in all_currency_pairs %}
+                <option value="{{ currency.name }}">{{ currency.name }}</option>
+            {% endfor %}
+        </select>
+        <select class="ui dropdown" id="time_frame" name="time_frame" data-sb-validations="required,position">
+            {% for frame in time_frames %}
+                <option value="{{ frame }}">{{ frame }}</option>
+            {% endfor %}
+        </select>
+        <button class="ui primary button" id="submitButton" type="submit">Change</button>
+    </form>
+    <h1>{{ currency_choice }}</h1>
+    <div class="ui hidden divider"></div>
+    <div class="chartContainer" id="liveCurrencies" style="height:60vh; width:80vw">
+        <canvas id="histChart"></canvas>
+    </div>
+    <script>
+
+        var histData = JSON.parse('{{actualData|safe}}');
+        console.log(histData);
+        var histChart = document.getElementById("histChart").getContext("2d");
+
+        var dataChart ={
+            labels: Object.keys(histData),
+            datasets:[
+                {
+                    label:'{{ currency_choice }}',
+                    fill: true,
+                    pointRadius: 1,
+                    backgroundColor: "rgba(120, 28, 159, 0.5)",
+                    pointBackgroundColor: "rgb(120, 28, 159)",
+                    pointBorderColor: "rgb(120, 28, 159)",
+                    pointHoverBackgroundColor: "rgb(80, 8, 111)",
+                    pointHoverBorderColor: "rgb(80, 8, 111)",
+                    data: Object.values(histData),
+                }]
+            };
+
+        var dailyChart = new Chart(histChart, {
+            type:'line',
+            data: dataChart
+        });
+
+
+        var loc = window.location
+        var wsStart = "ws://"
+        if (loc.protocol == 'https:'){
+            wsStart = 'wss://'
+        }
+        var endpoint = wsStart + loc.host + "/ws/live/"
+        console.log(endpoint)
+
+        socket = new WebSocket(endpoint);
+
+        socket.onopen = function(message) {
+            console.log("open", message);
+          }
+
+        socket.onmessage = function(e) {
+
+            var djangoData = JSON.parse(e.data);
+            console.log(djangoData);
+
+            newGraphData = dataChart.datasets[0].data
+            newGraphData.shift();
+            newGraphData.push(Object.values(djangoData));
+            dataChart.datasets[0].data = Object.values(djangoData);
+            console.log(dataChart.datasets[0].data);
+
+            newGraphLabels = dataChart.labels
+            newGraphLabels.shift();
+            newGraphLabels.push(Object.keys(djangoData));
+            dataChart.labels = Object.keys(djangoData);
+            console.log(dataChart.labels);
+
+            dailyChart.update();
+
+        }
+
+        socket.onerror = function(message) {
+            console.log("error", message);
+        }
+
+        socket.onclose = function(message) {
+            console.log("close", message);
+        }
+    </script>
 </div>
 {% endblock %}
