--- a/live/templates/live/homepage.html
+++ b/live/templates/live/homepage.html
@@ -11,7 +11,11 @@
             <div class="ghost-1">
                 <h3>I</h3>
             </div>
-            <a class="ui primary button" id="loginButton" href="{% url 'users:login' %}">Login</a>
+            {% if user.is_authenticated %}
+                <a class="ui primary button" id="logoutButton" href="{% url 'users:logout' %}">Logout</a>
+            {% else %}
+                <a class="ui primary button" id="loginButton" href="{% url 'users:login' %}">Login</a>
+            {% endif %}
             <a class="ui primary button" id="submitButton" href="{% url 'users:sign_up' %}">Sign Up</a>
         </div>
     </div>
