--- a/users/templates/users/login_page.html
+++ b/users/templates/users/login_page.html
@@ -9,10 +9,10 @@
             <div class="sign-up-wrapper">
                 <div class="row">
                     <div class="col">
-                        <div class="ui input">
+                        <div class="ui input" id="email_input">
                            {{ form.email }}
                         </div>
-                        <div class="ui input">
+                        <div class="ui input" id="password_input">
                            {{ form.password }}
                         </div>
                     </div>
